GNOME Bugzilla – Bug 686776
Shouldn't annotate constructor of GInitiallyUnowned subclasses
Last modified: 2012-10-24 17:17:45 UTC
See bug #686697 for the rationale.
Created attachment 227128 [details] [review] Don't annotate with (transfer full) constructors of GInitiallyUnowned subclasses
Review of attachment 227128 [details] [review]: I distinctly remember adding a bunch of these after introspection users complained, so I'd like to have some confirmation that stripping them is actually working.
Created attachment 227133 [details] test script This test script crashes without my patch.
Review of attachment 227128 [details] [review]: okay, let's do this in master - then we can see if something breaks and eventually backport to clutter-1.12.
Merged to master. Let me know when/if you want this to the stable branch as well. Attachment 227128 [details] pushed as 2be88b3 - Don't annotate with (transfer full) constructors of GInitiallyUnowned subclasses
The correct annotation would be (transfer floating), if anything. But the scanner will note the GInitiallyUnowned, and default to that.