Don't annotate with (transfer full) constructors of GInitiallyUnowned subclasses

https://bugzilla.gnome.org/show_bug.cgi?id=686776